# bank_scrapers

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: camo-purge.yml
api/kraken/: driver.py
bank_scrapers/: __init__.py
bank_scrapers/api_wrappers/: __init__.py
bank_scrapers/api_wrappers/kraken/: driver.py
bank_scrapers/cli/: cli.py
bank_scrapers/common/: classes.py  functions.py  log.py  types.py  values.py
bank_scrapers/crypto/: __init__.py
bank_scrapers/crypto/bitcoin/: __init__.py  driver.py
bank_scrapers/crypto/ethereum/: driver.py
bank_scrapers/docs/scripts/: test_badge_server.py  version_badge.py
bank_scrapers/examples/prometheus_exporter/: Dockerfile  README.md  bank_exporter.py  banks.json  requirements.txt
bank_scrapers/get_accounts_info/: driver.py
bank_scrapers/scrapers/: __init__.py
bank_scrapers/scrapers/becu/: __init__.py  driver.py
bank_scrapers/scrapers/chase/: driver.py  mfa_auth.py
bank_scrapers/scrapers/common/: functions.py  mfa_auth.py  types.py
bank_scrapers/scrapers/fidelity_netbenefits/: driver.py  types.py
bank_scrapers/scrapers/roundpoint/: driver.py
bank_scrapers/scrapers/smbc_prestia/: driver.py
bank_scrapers/scrapers/uhfcu/: driver.py
bank_scrapers/scrapers/vanguard/: driver.py
bank_scrapers/scrapers/zillow/: driver.py
scrapers/becu/: driver.py
scrapers/chase/: driver.py
scrapers/common/: functions.py
scrapers/fidelity_netbenefits/: driver.py
scrapers/roundpoint/: driver.py
scrapers/smbc_prestia/: driver.py
scrapers/uhfcu/: driver.py
scrapers/vanguard/: driver.py
scrapers/zillow/: driver.py
