# See:
# - https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# - https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[project]
name = "bank_scrapers"
authors = [
    { name = "Eric Bette" }
]
description = "Library for working with bank_scrapers drivers."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dynamic = ["version"]

dependencies = [
    "beautifulsoup4>=4.12.2",
    "pandas>=2.0.2",
    "requests>=2.31.0",
    "undetected-chromedriver>=3.5.0",
    "lxml>=4.9.2",
    "setuptools>=69.5.1",
    "lxml>=5.2.2"

]

[project.urls]
homepage = "https://github.com/eebette/bank_scrapers/tree/master"

[project.scripts]
bank-scrape = "bank_scrapers.cli.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "bank_scrapers.VERSION" }

[tool.setuptools.packages.find]
include = ["bank_scrapers*"]